--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 PORT=9000
+# VARIABLES DE ENTORNO DE LA BASE DE DATOS MYSQL
+MYSQLHOST="localhost"
+MYSQLUSER="root"
+MYSQLPASSWORD=""
+MYSQLPORT=3306
+MYSQLDATABASE="ficha15"
