Se guardan las cookie del token

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MYSQLUSER="root"
 MYSQLPASSWORD=""
 MYSQLPORT=3306
 MYSQLDATABASE="ficha15"
+# VARIABLE DE ENTORNO DE JSONWEBTOKEN
+JWT_SECRET=MAriaSEFUEConociAnumjerquetienelo2525
+JWT_TIMEEXPIRE="40s"
