--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT=9000
 # VARIABLES DE ENTORNO DE LA BASE DE DATOS MYSQL
-MYSQLHOST="localhost"
-MYSQLUSER="root"
-MYSQLPASSWORD=""
+MYSQLHOST="db4free.net"
+MYSQLUSER="dbtpssur_root"
+MYSQLPASSWORD="123456789"
 MYSQLPORT=3306
-MYSQLDATABASE="ficha15"
+MYSQLDATABASE="dbtpssur"
 # VARIABLE DE ENTORNO DE JSONWEBTOKEN
 JWT_SECRET=MAriaSEFUEConociAnumjerquetienelo2525
 JWT_TIMEEXPIRE="720s"
